--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Clean-node-api",
+  "name": "clean-node-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "git-commit-msg-linter": "^4.1.1"
+  }
 }
